added locationManager so select locaiton is less jank

--- a/ballotPlanner/User Set Up/UserLocationController.storyboard
+++ b/ballotPlanner/User Set Up/UserLocationController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fY8-tR-YbS">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -39,7 +39,8 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
-                                    <action selector="updateLocationWithSender:" destination="kQH-pM-pgh" eventType="editingDidBegin" id="C5x-dI-ylK"/>
+                                    <action selector="updateLocationWithSender:" destination="kQH-pM-pgh" eventType="editingDidEndOnExit" id="k2o-b6-lZj"/>
+                                    <action selector="updateLocationWithSender:" destination="kQH-pM-pgh" eventType="editingDidEnd" id="nxb-zq-yq7"/>
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hX0-4O-GkJ">
